--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,7 @@ body {
 .sidebar {
   background-color: #1f2229;
   max-width: 320px;
-  height: 200px;
+  height: 100%;
   margin-right: 2px;
 }
 .sidebar .sidebar__logo {
