--- a/styles/styles.less
+++ b/styles/styles.less
@@ -42,7 +42,7 @@ body {
 .sidebar {
     background-color: #1f2229;
     max-width: 320px;
-    height: 200px;
+    height: 100%;
     margin-right: 2px;
     .sidebar__logo {
         height: 160px;
